# SoapRing

./: CMakeLists.txt  README.md
tests/: CMakeLists.txt
tests/SoapRing/: CMakeLists.txt  main.cpp
